# cloud-rider

./: .gitignore  README.md
assets/: future_cloud_rider.drawio  high-level-server.drawio
client/: package-lock.json  package.json
client/src/: App.tsx
client/src/components/: BatteryStatusCard.tsx  StatsCard.tsx  TelemetryCard.tsx
client/src/model/: BatteryStatus.ts  GlobalPosition.ts  Heartbeat.ts  Stats.ts
server/: Cargo.toml
server/src/: connection_manager.rs  main.rs
server/src/domain/: cloud_rider_message.rs  message_channel.rs  mod.rs
server/src/mavlink/: mavlink_message_handler.rs  mavlink_message_mapper.rs  mavlink_worker.rs  mod.rs
server/src/messages/: global_position.rs  mod.rs
server/src/websocket/: message_channel.rs  mod.rs  websocket_sender.rs
